--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#C8BE9A</color>
     <color name="colorPrimaryDark">#625B3F</color>
     <color name="colorPrimaryMedium">#f2e8c6</color>
-    <color name="colorAccent">#0099FF</color>
+    <color name="colorAccent">#625B3F</color>
 </resources>
